--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <h1 class="w3-text-red w3-container" style="font-weight: bold;">Conclusion</h1>
             <div class="w3-container">
                 <p>Listening to others is both important for our role as tutors, and more so, our role as people. Let’s
-                    work together to listen carefully, listening with all of our body - for the people we love. </p>
+                    work together to listen carefully, listening with all of our body - for the benefit of all. </p>
             </div>
         </div>
 
